2013-04-10  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* diff-tests.sh: New script.

2013-03-27  Anton Kolesov <anton.kolesov@synopsys.com>

	* build-uclibc.sh: Ignore error which happens when running 'make
	distclean' on uClibc.

2013-03-26  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/telnet-extra.exp (telnet_spawn): Remove duplicate line.

2013-03-26  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* run-elf32-tests.sh, run-uclibc-tests.sh: Make build directories
	endian and tool chain release specific.

2013-03-26  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-elf32.sh, build-uclibc.sh: Use release specific build
	directory names.

2013-03-26  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* run-elf32-tests.sh: Replace bd_elf_gdb with bd_elf throughout.

2013-03-25  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-elf32.sh: Build GDB.
	* build-linux.sh: Ensure we have the right tool chain on the path.
	* build-uclibc.sh: Tidy up commenting.
	* dejagnu/baseboards/arc-linux-generic.exp: Set up sysroot command
	file.
	* dejagnu/ftp-extra.exp (make_relative): Correct typo for prefix.
	(ftp_download): Silently ignore long remote file names.
	* dejagnu/telnet-extra.exp (telnet_close): Correct logic.
	(telnet_exec): Tidy up details of proc.
	(telnet_spawn_open): New proc.
	(telnet_spawn): Rewrite logic of proc.
	* run-uclibc-tests.sh (ARC_GDB_COMMFILE): Create command file for
	GDB tests.

2013-03-18  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Replace "4.8" by "mainline" throughout.
	* build-elf32.sh: Likewise.
	* build-uclibc.sh: Likewise.
	* run-elf32-tests.sh: Likewise.
	* run-uclibc-tests.sh: Likewise.

2013-03-18  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Add --big-endian to help.

2013-03-15  Vineet Gupta <vgupta@synopsys.com>

	* build-uclibc.sh: Allow a defconfig based uClibc build
	Do a distclean and also increase the verbosity

2013-03-15  Vineet Gupta <vgupta@synopsys.com>
